@@ -1,8 +1,8 @@
 PYTHON ?= python3
-COVERAGE ?= coverage
+TOX ?= tox
 
 build:
-	$(PYTHON) -m build
+	$(TOX) run -m build
 
 install: clean
 	$(PYTHON) -m pip install --editable .
@@ -21,17 +21,15 @@ pypi: clean
 	# files generated by pydoctor
 	rm -rf src/smartcard/doc/html
 	rm -rf dist
-	$(PYTHON) -m build
+	# Use the tox 'build' label to generate wheels for all Python versions.
+	$(TOX) run -m build
 	python3 -m twine upload dist/*
 
-test: install
-	pytest
+test:
+	$(TOX) run -e py
 
 coverage:
-	$(COVERAGE) erase
-	$(COVERAGE) run -m unittest discover
-	$(COVERAGE) report
-	$(COVERAGE) html
+	$(TOX) run
 
 ChangeLog.git:
 	git log --stat --decorate=short > $@
