@@ -1,24 +1,62 @@
+# The following list of Python versions appears in several places in this file.
+#
+#   {3.9, 3.10, 3.11, 3.12}
+#
+# This affects parallel test suite execution and wheels that get built,
+# so use search-and-replace to update this list in all locations.
+# Manual editing may lead to mistakes.
+
 [tox]
 envlist =
     pylint
-    py3.9
-    py3.10
-    py3.11
-    py3.12
+    coverage_erase
+    py{3.9, 3.10, 3.11, 3.12}
+    coverage_report
 skip_missing_interpreters = True
+labels =
+    build=build-py{3.9, 3.10, 3.11, 3.12}
+
+[testenv:coverage_erase]
+description = Erase existing coverage reports
+skip_install = True
+deps =
+    coverage
+commands =
+    - coverage erase
 
 [testenv]
+depends =
+    py{3.9, 3.10, 3.11, 3.12}: coverage_erase
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    coverage erase
-    coverage run -m unittest discover
-    coverage report
-    coverage html
+    coverage run -m pytest
+
+[testenv:coverage_report{,-ci}]
+depends = py{3.9, 3.10, 3.11, 3.12}
+description =
+    !ci: Generate HTML and console reports
+    ci: Generate an XML report
+deps =
+    coverage
+commands_pre =
+    - coverage combine
+commands =
+    # Locally, generate an HTML and a console report
+    !ci: - coverage html
+    !ci: coverage report
+    # In CI, simply generate an XML report
+    ci: - coverage xml
+
+[testenv:build,build-py{3.9, 3.10, 3.11, 3.12}]
+description = Build sdist and wheel files
+skip_install = True
+deps =
+    build
+commands =
+    python -m build
 
 [testenv:pylint]
-base_python = py3.12
-skip_install = True
 deps =
     pylint
 commands =
