@@ -4,6 +4,8 @@ Unreleased changes
    * Migrate a `src/` layout.
    * Support only Python 3.9 and higher
    * Migrate CI to use the official Coveralls action
+   * Standardize local and CI testing to use tox
+   * Build wheels in CI for all supported Python versions
 
 2.1.1 (September 2024)
 ======================
